syntax = "proto3";

import "google/type/date.proto";

package piggymetrics.account;

option java_package = "com.github.galleog.piggymetrics.notification.grpc";
option java_outer_classname = "RecipientServiceProto";

// Settings for notifications of a particular notification type.
message NotificationSettings {
    // Indicates if the notification is active.
    bool active = 1;
    // Required. Notification frequency in days.
    int32 frequency = 2;
    // Date when the notification was last sent.
    google.type.Date notify_date = 3;
}

// Notification recipient.
message Recipient {
    // Required. Name of the user to send notifications to.
    string user_name = 1;
    // Required. Email to send notifications to.
    string email = 2;
    // Notification settings.
    map<string, NotificationSettings> notifications = 3;
}

// Request to get notification settings for a user.
message GetRecipientRequest {
    // Required. Name of the user whose notification settings should be found.
    string user_name = 1;
}

// Service to work with notification settings.
service RecipientService {
    // Gets notification settings for a user by its name.
    // Possible exception response statuses:
    //   NOT_FOUND - no notification settings for the specified user are found
    rpc GetRecipient (GetRecipientRequest) returns (Recipient);

    // Updates notification settings for the specified user.
    rpc UpdateRecipient (Recipient) returns (Recipient);
}